# covid-largo-sintomas-neuropsiquiatricos-prevalencia-2021-2024

./: CITATION.cff  EXAMPLE_NOTEBOOK.ipynb  HUGGINGFACE_CARD.md  README.md  codemeta.json  kaggle-metadata.json  pyproject.toml  setup.py
covid_largo_neuropsiquiatrico/: __init__.py  cargador.py
covid_largo_sintomas_neur/: __init__.py
notebooks/: covid_largo_neuropsiquiatrico_analisis.ipynb
