[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "covid-largo-neuropsiquiatrico"
version = "1.0.0"
description = "COVID Largo sintomas neuropsiquiatricos global 2021-2024. DOI: 10.7910/DVN/QUWC1F"
license = {text = "CC0-1.0"}
authors = [{name = "Juan Moises de la Serna", email = "juanmoises.delaserna@gmail.com"}]
keywords = ["covid-largo","neuropsiquiatrico","niebla-mental","depresion","ansiedad"]
requires-python = ">=3.7"
dependencies = ["pandas>=1.3.0","requests>=2.25.0","numpy>=1.20.0"]

[project.urls]
Homepage = "https://github.com/juanmoisesd/covid-largo-sintomas-neuropsiquiatricos-prevalencia-2021-2024"
"DOI del dataset" = "https://doi.org/10.7910/DVN/QUWC1F"
